# ChangeLog for dev-java/barcode4j
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Dec 2007; Bernhard Frauendienst <gentoo@nospam.obeliks.de>
  +metadata.xml, +barcode4j-2.0_alpha2.ebuild:
  New ebuild for barcode4j. Tests and doc currently fail to build and are thus
  restricted/not included.
