@@ -1,4 +1,4 @@
 DIST barcode4j-2.0alpha2-src.tar.gz 4955636 RMD160 0367a0c46f6c1596c56cc030791e9b5b801a9fe8 SHA1 ae74439a2e1524da802096cb0970d881b41158ef SHA256 d2c9882c180d35e60b40a68ed04560422e10f67f14b1c5bde0d58e104c9d2d36
-EBUILD barcode4j-2.0_alpha2.ebuild 1727 RMD160 aabb50f30af035f28c22a5e2a7b99cd55fc3e2d7 SHA1 24bbb6b244c238e4ced839d20b66c07f114d80c6 SHA256 c56636aca176c142e277a17adf16a9fa2c034c54fc8ee4c4d98c97b3bcd761d8
-MISC ChangeLog 337 RMD160 230bb35395bd5ca6a31d0b556866c9aaf5e446b8 SHA1 398a0565b5f791db24f53e0f2cddc16b11ca519b SHA256 9e66a9b5457ba8ec7d61477c0fb63e1715f371ec2934d9c70eea837e46cfc135
+EBUILD barcode4j-2.0_alpha2.ebuild 1661 RMD160 edb7d64e529c43ee7c8340f9e701ffe54420e8f9 SHA1 3347fbd34668fb5d30c76da2a4348ecb21133130 SHA256 2e5103ad7457bed4040f3adcd6e68d4c6e2d562fbfe3b4a9ab75b77bb031a5c5
+MISC ChangeLog 459 RMD160 5722b68dca892d7fdb8f53f7334d726aefb6cb2b SHA1 64f7ca73e66445cb2d3e12fac80ddc4c51f93a86 SHA256 81df44c498f2080c6e085865b8a473d3fce2d4670e7df7638895b142d71e940c
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
